--- a/articles/java/index.yml
+++ b/articles/java/index.yml
@@ -7,12 +7,12 @@ metadata:
   description: これらの Java 開発者向けのチュートリアルとツールを使用して、クラウドに対応したアプリの開発を開始しましょう。
   ms.topic: hub-page
   ms.date: 04/08/2020
-  ms.openlocfilehash: 94ea0c2dd3b11651cc30bce84bc3b26f7f12cc7a
-  ms.sourcegitcommit: 050c898df76a1af5feffe99e392a073b8ac9c19c
+  ms.openlocfilehash: badee30def237b49cb9e46730335e730090fb66b
+  ms.sourcegitcommit: 71847ee0a1fee3f3320503629d9a8c82319a1f6a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/16/2020
-  ms.locfileid: "92137171"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "99511091"
 conceptualContent:
   items:
   - title: Java 用 Azure クイック スタート
@@ -61,10 +61,10 @@ conceptualContent:
     links:
     - text: Java を使用した Azure 開発
       itemType: get-started
-      url: sdk/java-sdk-azure-get-started.md
-    - text: パターンとベスト プラクティス
+      url: sdk/get-started.md
+    - text: Azure SDK for Java の概要
       itemType: learn
-      url: sdk/java-sdk-azure-concepts.md
+      url: sdk/overview.md
     - text: Java API ブラウザー
       itemType: reference
       url: /java/api/?view=azure-java
