--- a/articles/github/toc.yml
+++ b/articles/github/toc.yml
@@ -14,6 +14,8 @@
           href: database-actions-deploy.md
         - name: 変数の代入を使用する
           href: github-variable-substitution.md
+        - name: Key Vault シークレットの使用
+          href: github-key-vault.md
         - name: Azure Policy の管理
           href: manage-azure-policy.md
     - name: Azure DevOps と GitHub
