--- a/articles/javascript/TOC.yml
+++ b/articles/javascript/TOC.yml
@@ -161,10 +161,14 @@
               href: how-to/with-azure-cli/configure-app-service-custom-domain-name.md
             - name: MongoDB 用 Cosmos DB リソースを使用する
               href: how-to/with-azure-cli/create-mongodb-cosmosdb.md
+            - name: MariaDB リソースを使用する
+              href: how-to/with-azure-cli/create-mariadb.md
         - name: データベースの場合
           items:
             - name: CosmosDB での MongoDB
               href: how-to/with-database/use-mongodb-as-cosmosdb.md
+            - name: MariaDB
+              href: how-to/with-database/use-mariadb.md
         - name: Web アプリをデプロイする
           href: how-to/deploy-web-app.md
         - name: コンテナーをデプロイする
