--- a/articles/javascript/TOC.yml
+++ b/articles/javascript/TOC.yml
@@ -153,6 +153,8 @@
               href: how-to/with-visual-studio-code/clone-github-repository.md
             - name: ローカル プロジェクトからコンテナーを作成する
               href: how-to/with-visual-studio-code/containerize-local-project.md
+            - name: Azure データベースを作成する
+              href: how-to/with-visual-studio-code/create-azure-database.md
         - name: Azure CLI の場合
           items:
             - name: コンテナー レジストリを作成および使用する
@@ -165,12 +167,18 @@
               href: how-to/with-azure-cli/create-mariadb.md
             - name: MySQL リソースを使用する
               href: how-to/with-azure-cli/create-mysql-db.md
+            - name: PostgreSQL リソースを使用する
+              href: how-to/with-azure-cli/create-postgresql-server-resource.md
         - name: データベースの場合
           items:
             - name: CosmosDB での MongoDB
               href: how-to/with-database/use-mongodb-as-cosmosdb.md
             - name: MariaDB
               href: how-to/with-database/use-mariadb.md
+            - name: MySQL
+              href: how-to/with-database/use-mysql-db.md
+            - name: PostgreSQL
+              href: how-to/with-database/use-postgresql-db.md
         - name: Web アプリをデプロイする
           href: how-to/deploy-web-app.md
         - name: コンテナーをデプロイする
