--- a/articles/javascript/TOC.yml
+++ b/articles/javascript/TOC.yml
@@ -171,6 +171,8 @@
               href: how-to/with-azure-cli/create-postgresql-server-resource.md
         - name: データベースの場合
           items:
+            - name: 作業の開始
+              href: how-to/with-database/getting-started.md
             - name: CosmosDB での MongoDB
               href: how-to/with-database/use-mongodb-as-cosmosdb.md
             - name: MariaDB
