--- a/articles/python/index.yml
+++ b/articles/python/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.service: multiple
   ms.devlang: python
   ms.custom: devx-track-python
-  ms.openlocfilehash: 2dbd633555e7841eb28f58813a9ba292da989dd6
-  ms.sourcegitcommit: 324da872a9dfd4c55b34739824fc6a6598f2ae12
+  ms.openlocfilehash: b242630cbc9b2e352e857704402dbac84f1564a5
+  ms.sourcegitcommit: 450cfb580f0fef7aabd38a7db17ecf7502126ce4
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "89374543"
+  ms.lasthandoff: 02/16/2021
+  ms.locfileid: "100548833"
 landingContent:
 - title: サーバーレスな Functions
   linkLists:
@@ -39,16 +39,32 @@ landingContent:
     links:
     - text: Visual Studio Code を使用した Flask
       url: tutorial-deploy-app-service-on-linux-01.md
-    - text: コマンド ラインを使用した Flask
+    - text: CLI を使用した Flask
       url: /azure/app-service/quickstart-python
     - text: Azure portal を使用した Django と PostgreSQL
       url: tutorial-python-postgresql-app-portal.md
-    - text: コマンド ラインを使用した Django と PostgreSQL
+    - text: CLI を使用した Django と PostgreSQL
       url: /azure/app-service/tutorial-python-postgresql-app
     - text: Visual Studio Code を使用したコンテナー
       url: tutorial-deploy-containers-01.md
     - text: CI/CD パイプライン
       url: /azure/devops/pipelines/ecosystems/python-webapp
+- title: どのように思われたでしょうか。
+  linkLists:
+  - linkListType: whats-new
+    links:
+    - text: このページについてご意見をお聞かせください
+      url: https://ux.microsoft.com/Talk/PythonDevCenterDocumentation
+- title: データとストレージ
+  linkLists:
+  - linkListType: deploy
+    links:
+    - text: SQL データベース
+      url: quickstarts-data-solutions.md#sql-databases
+    - text: テーブル、BLOB、ファイル、NoSQL
+      url: quickstarts-data-solutions.md#tables-blobs-files-nosql
+    - text: ビッグ データと分析
+      url: quickstarts-data-solutions.md#big-data-and-analytics
 - title: 機械学習
   linkLists:
   - linkListType: how-to-guide
@@ -63,16 +79,6 @@ landingContent:
       url: quickstarts-cognitive-services.md
     - text: さらに表示...
       url: quickstarts-machine-learning.md
-- title: データとストレージ
-  linkLists:
-  - linkListType: deploy
-    links:
-    - text: SQL データベース
-      url: quickstarts-data-solutions.md#sql-databases
-    - text: テーブル、BLOB、ファイル、NoSQL
-      url: quickstarts-data-solutions.md#tables-blobs-files-nosql
-    - text: ビッグ データと分析
-      url: quickstarts-data-solutions.md#big-data-and-analytics
 - title: Azure ライブラリ (SDK)
   linkLists:
   - linkListType: get-started
