--- a/articles/python/index.yml
+++ b/articles/python/index.yml
@@ -14,19 +14,19 @@ metadata:
   ms.service: multiple
   ms.devlang: python
   ms.custom: devx-track-python
-  ms.openlocfilehash: b242630cbc9b2e352e857704402dbac84f1564a5
-  ms.sourcegitcommit: 450cfb580f0fef7aabd38a7db17ecf7502126ce4
+  ms.openlocfilehash: 831a749cb0fdea1e9c6f1e10431d5060c819ea17
+  ms.sourcegitcommit: 576c878c338d286060010646b96f3ad0fdbcb814
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/16/2021
-  ms.locfileid: "100548833"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "102118594"
 landingContent:
 - title: サーバーレスな Functions
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: Visual Studio Code を使用してデプロイする
-      url: tutorial-vs-code-serverless-python-01.md
+      url: /azure/azure-functions/create-first-function-vs-code-python
     - text: コマンド ラインを使用してデプロイする
       url: /azure/azure-functions/functions-create-first-azure-function-azure-cli?pivots=programming-language-python
     - text: Visual Studio Code を使用してストレージに接続する
@@ -47,14 +47,10 @@ landingContent:
       url: /azure/app-service/tutorial-python-postgresql-app
     - text: Visual Studio Code を使用したコンテナー
       url: tutorial-deploy-containers-01.md
+    - text: Azure Storage を使用した静的なサイト
+      url: how-to-create-static-sites.md
     - text: CI/CD パイプライン
       url: /azure/devops/pipelines/ecosystems/python-webapp
-- title: どのように思われたでしょうか。
-  linkLists:
-  - linkListType: whats-new
-    links:
-    - text: このページについてご意見をお聞かせください
-      url: https://ux.microsoft.com/Talk/PythonDevCenterDocumentation
 - title: データとストレージ
   linkLists:
   - linkListType: deploy
