commit translated contents

--- a/articles/javascript/index.yml
+++ b/articles/javascript/index.yml
@@ -7,19 +7,19 @@ metadata:
   description: 各種のチュートリアル、ツール、SDK リファレンスを活用して、ブラウザーまたは Node.js で Azure SDK for JavaScript を使用したアプリの開発を開始しましょう。
   author: diberry
   ms.author: diberry
-  ms.date: 01/20/2021
+  ms.date: 03/04/2021
   ms.topic: landing-page
   ms.collection: collection
   ms.technology: azure
   ms.service: multiple
   ms.devlang: javascript
   ms.custom: 2020Aug21Redesign, devx-track-js
-  ms.openlocfilehash: dbc01af045726a3e0b5b8c788cb3415ce985ba50
-  ms.sourcegitcommit: 3f8aa923e4626b31cc533584fe3b66940d384351
+  ms.openlocfilehash: 1fd27be9cc1037b591933e7ec93ca6b318720475
+  ms.sourcegitcommit: 7991f748720673d2dc50baaa8658348ff6cc1044
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/01/2021
-  ms.locfileid: "99224746"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "102604093"
 landingContent:
 - title: Azure を利用するのが初めてであれば、
   linkLists:
@@ -45,6 +45,8 @@ landingContent:
       url: whats-new-docs.md
     - text: デベロッパー アドボケイトの最新情報
       url: whats-new-developer-advocacy.md
+    - text: JS 開発者向けの上位 10 個のドキュメント
+      url: whats-new-docs.md#top-10
 - title: デプロイとホスト
   linkLists:
   - linkListType: tutorial
