--- a/articles/java/spring-framework/index.yml
+++ b/articles/java/spring-framework/index.yml
@@ -6,12 +6,12 @@ metadata:
   description: Spring は VMware によって開発されたオープンソースのアプリケーション フレームワークであり、Java アプリケーションを作成するための簡素化されたモジュール方式のアプローチを提供します。
   ms.date: 03/13/2020
   ms.topic: landing-page
-  ms.openlocfilehash: 3aaece404996f82110bc252581771a6311a6c6f1
-  ms.sourcegitcommit: 8e1d3a384ccb0e083589418d65a70b3a01afebff
+  ms.openlocfilehash: 8236e23befec1fac825f701886c88f257aa1e415
+  ms.sourcegitcommit: 3536f174735cd3bb7da7e4b266fbf43349a22b67
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/12/2020
-  ms.locfileid: "94560195"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "103193467"
 landingContent:
 - title: ファースト ステップ ガイド
   linkLists:
@@ -25,8 +25,10 @@ landingContent:
     links:
     - text: Azure Storage
       url: configure-spring-boot-starter-java-app-with-azure-storage.md
-    - text: Key Vault
+    - text: キー コンテナーのシークレット
       url: configure-spring-boot-starter-java-app-with-azure-key-vault.md
+    - text: Key Vault 証明書
+      url: configure-spring-boot-starter-java-app-with-azure-key-vault-certificates.md
     - text: Kafka と Event Hubs
       url: configure-spring-cloud-stream-binder-java-app-kafka-azure-event-hub.md
 - title: ステップバイステップのチュートリアル
